--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "laravel",
         "vbl",
         "vbl-component",
-        "vbl-side-bar-tab",
-        "side-bar-tab"
+        "vbl-side-bar-tab"
     ],
     "author": "Benny Leonard Enrico Panggabean <bendo01@gmail.com>",
     "license": "MIT"
